fix: terminal ai suggest z-index fix, remove click event (#3644)

--- a/packages/ai-native/src/browser/ai-terminal/component/terminal-command-suggest-controller.module.less
+++ b/packages/ai-native/src/browser/ai-terminal/component/terminal-command-suggest-controller.module.less
@@ -3,7 +3,7 @@
   background-color: var(--editorGroupHeader-tabsBackground);
   bottom: 0;
   left: 0;
-  z-index: 3;
+  z-index: var(--stacking-level-xterm-decoration, 8);
   width: 500px;
   padding: 8px 10px 8px 14px;
   border-radius: 12px;
